Version 0.4.13     unreleased

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 0.4.12     15 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python v3.12.

Version 0.4.11     01 Oct 2023

	* Improve error handling for some new weather.gov API failures.

Version 0.4.10     11 Jun 2023

	* Document new install method using pipx instead of pip.

Version 0.4.9     07 Jun 2023

	* Fix checktabs to be safe for file named '-'.
	* Rewrite request-related tests to use the responses framework.
	* Address requests CVE-2023-32681 and starlette CVE-2023-29159.
	* Upgrade to Poetry v1.5.1 and update other dependencies.

Version 0.4.8     26 Feb 2023

	* Upgrade all dependencies to the latest major version.
	* Address dependabot warning for starlette < 0.25.0 via fastapi.

Version 0.4.7     30 Dec 2022

	* Add NOTICE file to sdist, alongside existing LICENSE file.
	* Automate the existing manual release process using GitHub Actions.

Version 0.4.6     09 Nov 2022

	* Support Python 3.11.
	* Convert to modern importlib-resources files() pattern to fix deprecation.

Version 0.4.5     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.
	* Rework the GitHub Actions build process to pull out shared code.

Version 0.4.4     18 Oct 2022

	* Handle weather.gov errors with a simple logged error message.

Version 0.4.3     05 Sep 2022

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint v2.15.0 and address warnings.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target MacOS.
	* Update various dependencies for the developer environment.

Version 0.4.2     24 Jun 2022

	* Upgrade to smartapp-sdk v0.5.0.

Version 0.4.1     22 Jun 2022

	* Use InfluxDBClient.write_api(SYNCHRONOUS) so file handles are closed.